Première version (Inscription/Connexion) + modification BD

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=37961678ac1cdca6f6219bb6687fd79a
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=gmail+smtp://dbltrad@gmail.com:elsword93@default
+MAILER_DSN=gmail+smtp://testsymfonybot@gmail.com:elsword93@default
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
