Deuxième version (Enregistrement de documents/ Lecteur de documents)

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -17,3 +17,12 @@ document_add:
 show_pdf:
   path: /pdf/{name}
   controller: App\Controller\HomeController::show
+
+register:
+  path: /register
+  controller: App\Controller\RegistrationController::register
+
+login:
+  path: /login
+  controller: App\Controller\SecurityController::login
+
